[FIX] Removed deprecated method.